refactor: изменены эндпоинты api и обновлена документация swagger
- теперь все эндпоинты api начинаются с /api
- документация swagger доступна перенесена на эндпоинт /api/docs
- регистрация эндпоинтов api перенесена в отдельную функцию
- обновлена swagger документация
