# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/auth/login": {
+        "/api/auth/login": {
             "post": {
                 "description": "Возвращает access token в body и refresh token в cookie\nДля доступа к api нужен access token\nВремя жизни access token - 15 минут\nВремя жизни refresh token - 30 дней\nДля обновления access token необходимо делать запрос POST /refresh с refresh token в куках",
                 "consumes": [
@@ -29,13 +29,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.AuthHandlers"
+                            "$ref": "#/definitions/dto.AccessTokenResponse"
                         }
                     }
                 }
             }
         },
-        "/auth/logout": {
+        "/api/auth/logout": {
             "post": {
                 "description": "Удаляет refresh token из cookie",
                 "consumes": [
@@ -52,7 +52,7 @@
                 }
             }
         },
-        "/auth/refresh": {
+        "/api/auth/refresh": {
             "post": {
                 "description": "Возвращает новый access и refresh токены\nТребуется refresh токен в куках",
                 "tags": [
@@ -66,7 +66,7 @@
                 }
             }
         },
-        "/auth/register": {
+        "/api/auth/register": {
             "post": {
                 "description": "Регистрирует пользователя в системе\nлогиниться в системе нужно отдельно от регистрации",
                 "consumes": [
@@ -94,7 +94,7 @@
                 }
             }
         },
-        "/auth/user": {
+        "/api/auth/user": {
             "get": {
                 "description": "Возвращает данные пользователя по access_token",
                 "tags": [
@@ -128,6 +128,14 @@
         }
     },
     "definitions": {
+        "dto.AccessTokenResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.LoginRequest": {
             "type": "object",
             "properties": {
@@ -165,9 +173,6 @@
                     "type": "string"
                 }
             }
-        },
-        "handlers.AuthHandlers": {
-            "type": "object"
         }
     }
 }
